--- a/MGBK3.csproj
+++ b/MGBK3.csproj
@@ -35,6 +35,9 @@
     <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\MGBK\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\MGBK\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -53,25 +56,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChitiethoadonHP.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="CLB.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Context.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Context.Context.tt</DependentUpon>
+    <Compile Include="fCLB.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Context.tt</DependentUpon>
+    <Compile Include="fCLB.Designer.cs">
+      <DependentUpon>fCLB.cs</DependentUpon>
     </Compile>
-    <Compile Include="Context.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Context.edmx</DependentUpon>
+    <Compile Include="fHoadonHocphi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fHoadonHocphi.Designer.cs">
+      <DependentUpon>fHoadonHocphi.cs</DependentUpon>
     </Compile>
     <Compile Include="fHocsinh.cs">
       <SubType>Form</SubType>
@@ -85,37 +85,79 @@
     <Compile Include="fLop.Designer.cs">
       <DependentUpon>fLop.cs</DependentUpon>
     </Compile>
+    <Compile Include="fLopCLB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fLopCLB.Designer.cs">
+      <DependentUpon>fLopCLB.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="fThoikhoabieu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fThoikhoabieu.Designer.cs">
+      <DependentUpon>fThoikhoabieu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Hoadonhocphi.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Hocsinh.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="LopCLB.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="LopHanhchinh.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sysdiagram.cs">
-      <DependentUpon>Context.tt</DependentUpon>
+    <Compile Include="spHocsinhDetail_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="fCLB.resx">
+      <DependentUpon>fCLB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fHoadonHocphi.resx">
+      <DependentUpon>fHoadonHocphi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fHocsinh.resx">
       <DependentUpon>fHocsinh.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fLop.resx">
       <DependentUpon>fLop.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fLopCLB.resx">
+      <DependentUpon>fLopCLB.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fThoikhoabieu.resx">
+      <DependentUpon>fThoikhoabieu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -126,12 +168,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EntityDeploy Include="Context.edmx">
+    <EntityDeploy Include="Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Context.Designer.cs</LastGenOutput>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Context.edmx.diagram">
-      <DependentUpon>Context.edmx</DependentUpon>
+    <None Include="Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -148,19 +190,19 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Context.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Context.Context.cs</LastGenOutput>
-      <DependentUpon>Context.edmx</DependentUpon>
-    </Content>
-    <Content Include="Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Context.edmx</DependentUpon>
-      <LastGenOutput>Context.cs</LastGenOutput>
-    </Content>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Content Include="Model1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
