--- a/MGBK3.csproj
+++ b/MGBK3.csproj
@@ -61,6 +61,12 @@
     <Compile Include="CLB.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="fChitiethoadon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fChitiethoadon.Designer.cs">
+      <DependentUpon>fChitiethoadon.cs</DependentUpon>
+    </Compile>
     <Compile Include="fCLB.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +144,9 @@
     <Compile Include="sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="fChitiethoadon.resx">
+      <DependentUpon>fChitiethoadon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fCLB.resx">
       <DependentUpon>fCLB.cs</DependentUpon>
     </EmbeddedResource>
