--- a/MGBK3.csproj
+++ b/MGBK3.csproj
@@ -32,18 +32,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\MGBK\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\MGBK\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+    <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -79,6 +84,12 @@
     <Compile Include="fHoadonHocphi.Designer.cs">
       <DependentUpon>fHoadonHocphi.cs</DependentUpon>
     </Compile>
+    <Compile Include="fHocsinhTheoLopCLB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fHocsinhTheoLopCLB.Designer.cs">
+      <DependentUpon>fHocsinhTheoLopCLB.cs</DependentUpon>
+    </Compile>
     <Compile Include="fHocsinh.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +113,12 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="fReportHoadonTheoHS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fReportHoadonTheoHS.Designer.cs">
+      <DependentUpon>fReportHoadonTheoHS.cs</DependentUpon>
     </Compile>
     <Compile Include="fThoikhoabieu.cs">
       <SubType>Form</SubType>
@@ -138,7 +155,28 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Report\rpHoadonHPtheoHS.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rpHoadonHPtheoHS.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Report\rpHocsinhtheoLopCLB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rpHocsinhtheoLopCLB.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Report\rpHsByLopCLBGROUPBY.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rpHsByLopCLBGROUPBY.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="spHocsinhDetail_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="spSelectHSByLopCLBID_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagram.cs">
@@ -153,6 +191,9 @@
     <EmbeddedResource Include="fHoadonHocphi.resx">
       <DependentUpon>fHoadonHocphi.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fHocsinhTheoLopCLB.resx">
+      <DependentUpon>fHocsinhTheoLopCLB.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fHocsinh.resx">
       <DependentUpon>fHocsinh.cs</DependentUpon>
     </EmbeddedResource>
@@ -165,6 +206,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fReportHoadonTheoHS.resx">
+      <DependentUpon>fReportHoadonTheoHS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="fThoikhoabieu.resx">
       <DependentUpon>fThoikhoabieu.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,7 +220,20 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Report\rpHoadonHPtheoHS.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rpHoadonHPtheoHS.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report\rpHocsinhtheoLopCLB.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rpHocsinhtheoLopCLB.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report\rpHsByLopCLBGROUPBY.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rpHsByLopCLBGROUPBY.cs</LastGenOutput>
+    </EmbeddedResource>
     <EntityDeploy Include="Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -200,6 +257,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Model1.Context.tt">
@@ -212,6 +270,9 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
